GEN: adding authorities, users and roles